implemented use cases for retriving fibonacci numbers

--- a/src/Test/Test.csproj
+++ b/src/Test/Test.csproj
@@ -15,5 +15,6 @@
   <ItemGroup>
     <ProjectReference Include="..\CrossCuttingConcerns\CrossCuttingConcerns.csproj" />
     <ProjectReference Include="..\Entity\Entity.csproj" />
+    <ProjectReference Include="..\UseCase.Implementation\UseCase.Implementation.csproj" />
   </ItemGroup>
 </Project>
