--- a/src/UseCase.Implementation/UseCase.Implementation.csproj
+++ b/src/UseCase.Implementation/UseCase.Implementation.csproj
@@ -9,6 +9,11 @@
   <ItemGroup>
     <ProjectReference Include="..\Entity\Entity.csproj" />
     <ProjectReference Include="..\UseCase.Abstraction\UseCase.Abstraction.csproj" />
+    <ProjectReference Include="..\Repository.Abstraction\Repository.Abstraction.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="7.0.0" />
   </ItemGroup>
 
 </Project>
