--- a/src/Api/appsettings.json
+++ b/src/Api/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "DistributedCache": {
+    "Host": "localhost:6379",
+    "RecordExpirationInSeconds": 120
+  }
 }
