--- a/src/Entity/Entity.csproj
+++ b/src/Entity/Entity.csproj
@@ -7,4 +7,7 @@
   <ItemGroup>
     <ProjectReference Include="..\CrossCuttingConcerns\CrossCuttingConcerns.csproj" />
   </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="FluentValidation.AspNetCore" Version="11.2.2" />
+  </ItemGroup>
 </Project>
